--- a/public/index.html
+++ b/public/index.html
@@ -26,8 +26,8 @@
     -->
 
     <link href="https://fonts.googleapis.com/css2?family=Jost:wght@300&display=swap" rel="stylesheet">
-    
-    <title>React App</title>
+
+    <title>Nuclear Physics Calculator</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
